--- a/netflix-clone/src/components/PopularMoviesComponent/PopularMoviesComponent.css
+++ b/netflix-clone/src/components/PopularMoviesComponent/PopularMoviesComponent.css
@@ -9,7 +9,7 @@
   color: #fff;
   font-size: 32px;
   margin: 0;
-  padding-top: 12px;
+  padding-top: 30px;
   padding-bottom: 17px;
 }
 
@@ -38,4 +38,30 @@ overflow-x: scroll;
   max-height: 168px;
   height: 100vh;
   cursor: pointer;
+}
+
+.popularMoviesComponent .second-cards{
+  margin-top: 30px;
+}
+
+.popularMoviesComponent .inner .bottom-heading h1{
+  color: #fff;
+    font-size: 32px;
+    margin: 0;
+    padding-top: 12px;
+    padding-bottom: 17px;
+}
+
+@media only screen and (max-width: 600px){
+  .popularMoviesComponent .inner .cards img{
+    max-height: 130px;
+  }
+
+  .popularMoviesComponent .inner .main-heading h1{
+    font-size: 25px;
+  }
+
+    .popularMoviesComponent .inner .bottom-heading h1{
+      font-size: 25px;
+    }
 }
