--- a/netflix-clone/src/components/CardsComponent/CardsComponent.css
+++ b/netflix-clone/src/components/CardsComponent/CardsComponent.css
@@ -1,25 +1,22 @@
 
-.cardsComponent  .cards-list {
+.cardsComponent  .cards-list{
   display: flex;
   gap: 10px;
   overflow-x: scroll;
-  padding-right: 34px;
+  /* padding-right: 34px; */
 }
 
-.cardsComponent h1{
+.cardsComponent .cards-title h1{
   color: #fff;
     font-size: 32px;
     margin: 0;
     padding-top: 30px;
     padding-bottom: 17px;
+    position: relative;
 }
 
 .cardsComponent .cards-list::-webkit-scrollbar {
   display: none;
-}
-
-.cardsComponent .cards {
-  position: relative;
 }
 
 .cardsComponent .cards p {
@@ -29,8 +26,18 @@
   margin-top: 10px;
 }
 
+.cardsComponent .cards-list a{
+  text-decoration: none;
+}
+
 .cardsComponent .cards img {
   max-height: 168px;
   height: 100vh;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 450px){
+ .cardsComponent .cards-list{
+padding-right: 0px;
+  }
 }
