--- a/netflix-clone/src/components/PopularMoviesComponent/PopularMoviesComponent.css
+++ b/netflix-clone/src/components/PopularMoviesComponent/PopularMoviesComponent.css
@@ -5,14 +5,6 @@
   background-color: #181717;
 }
 
-.popularMoviesComponent .inner .main-heading h1{
-  color: #fff;
-  font-size: 32px;
-  margin: 0;
-  padding-top: 30px;
-  padding-bottom: 17px;
-}
-
 .popularMoviesComponent .inner .cards-list{
 display: flex;
 gap: 10px;
@@ -28,13 +20,6 @@ padding-right: 34px;
   position: relative;
 }
 
-.popularMoviesComponent .inner .cards p{
-  color: #fff;
-  font-size: 18px;
-  text-align: center;
-  margin-top: 10px;
-}
-
 .popularMoviesComponent .inner .cards img{
   max-height: 168px;
   height: 100vh;
@@ -45,24 +30,19 @@ padding-right: 34px;
   margin-top: 30px;
 }
 
-.popularMoviesComponent .inner .bottom-heading h1{
-  color: #fff;
-    font-size: 32px;
-    margin: 0;
-    padding-top: 12px;
-    padding-bottom: 17px;
-}
 
 @media only screen and (max-width: 600px){
   .popularMoviesComponent .inner .cards img{
     max-height: 130px;
   }
+}
 
-  .popularMoviesComponent .inner .main-heading h1{
-    font-size: 25px;
-  }
+@media only screen and (max-width: 450px){
+.popularMoviesComponent{
+  padding-left: 20px;
+}
 
-    .popularMoviesComponent .inner .bottom-heading h1{
-      font-size: 25px;
-    }
+.popularMoviesComponent .inner .cards-list{
+  padding-right: 20px;
+}
 }
