--- a/netflix-clone/src/pages/PlayerPage/PlayerPage.css
+++ b/netflix-clone/src/pages/PlayerPage/PlayerPage.css
@@ -46,7 +46,10 @@ padding: 0 30px;
 
 @media only screen and (max-width: 600px){
   .playerPage .inner{
-    padding-top: 70px;
+   margin: 0;
+   position: absolute;
+   top: 20px;
+   width: 100%;
   }
 
   .playerPage .icon{
@@ -60,4 +63,9 @@ padding: 0 30px;
     flex-direction: column;
     align-items: center;
   }
+
+.playerPage .player-info{
+ padding: 0 5px 0 5px;
+ margin-bottom: 200px;
+}
 }
