--- a/netflix-clone/src/pages/PlayerPage/PlayerPage.css
+++ b/netflix-clone/src/pages/PlayerPage/PlayerPage.css
@@ -67,5 +67,8 @@ padding: 0 30px;
 .playerPage .player-info{
  padding: 0 5px 0 5px;
  margin-bottom: 200px;
+ gap: 10px;
+ text-align: center;
+ font-size: 14px;
 }
 }
