--- a/netflix-clone/src/pages/ListPage/ListPage.css
+++ b/netflix-clone/src/pages/ListPage/ListPage.css
@@ -2,7 +2,7 @@
 .listPage{
   margin-top: 100px;
   background-color: #181717;
-  height: 100%;
+  padding-bottom: 80px;
 }
 
 .listPage .inner .main-heading{
@@ -14,15 +14,23 @@
   color: #fff;
 margin: 0;
 font-size: 32px;
+padding-bottom: 8px;
 }
 
 .listPage .movie-list{
   display: flex;
-  gap: 10px;
-  margin-top: 30px;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 20px;
   padding-left: 25px;
   overflow-x: scroll;
   padding-right: 25px;
+  padding-bottom: 20px;
+}
+
+.inner .border hr{
+  margin-left: 25px;
+  margin-right: 25px;
 }
 
 .listPage .movie-list::-webkit-scrollbar{
@@ -30,20 +38,46 @@ font-size: 32px;
 }
 
 .listPage .movie-list .movie-item img{
-  max-height: 250px;
+  max-height: 200px;
     height: 100vh;
     margin-bottom: 10px;
+    cursor: pointer;
 }
+
 
 .listPage .movie-list p{
   color: #fff;
-    font-size: 18px;
+    font-size: 20px;
     text-align: center;
     margin: 0;
-    max-width: 170px;
-    width: 100%;
 }
 
 .listPage .movie-list a{
   text-decoration: none;
+}
+
+.listPage .movie-item{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.listPage .movie-item hr{
+  width: 100%;
+}
+
+
+.listPage .movie-inner{
+  width: 100%;
+}
+
+.listPage .movie-inner .delete-movie svg{
+  width: 25px;
+  cursor: pointer;
+}
+
+.listPage .movie-inner .movie-description{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
