--- a/netflix-clone/src/components/HeaderComponent/HeaderComponent.css
+++ b/netflix-clone/src/components/HeaderComponent/HeaderComponent.css
@@ -253,6 +253,94 @@ margin: 0;
   text-decoration: none;
 }
 
+.headerComponent .notification-dropDown{
+  position: absolute;
+  top: 70px;
+  right: 70px;
+  border: solid 1px rgba(0, 0, 0, 0.5);
+  background-color: rgba(0,0,0, 0.5);
+  max-width: 400px;
+    width: 100%;
+    max-height: 300px;
+    height: 100vh;
+    overflow-y: auto;
+    border-radius: 8px;
+}
+
+
+.headerComponent .notification-movie-item{
+  display: flex;
+  gap: 10px;
+}
+
+.headerComponent .notification-movie-info p{
+  color: #fff;
+  margin: 0;
+  padding: 0;
+  width: 140px;
+  font-size: 18px;
+}
+
+.headerComponent .notification-content{
+  padding-left: 15px;
+}
+
+.headerComponent .notification-content .main-titles{
+display: flex;
+justify-content: space-between;
+padding-right: 15px;
+}
+
+.headerComponent .notification-content .main-titles h4{
+  margin: 0;
+  padding: 0;
+  padding: 15px 0;
+}
+
+.headerComponent .notification-content .main-titles a{
+  text-decoration: none;
+  color: #fff;
+  margin: 0;
+  padding: 0;
+}
+
+.headerComponent .notification-content .main-titles #list-link{
+cursor: pointer;
+}
+
+.headerComponent .notification-content h4{
+  color: #fff;
+    margin: 0;
+    padding: 0;
+    padding: 15px 0;
+}
+
+.headerComponent .drop-down-texts p{
+  color: #fff;
+    margin: 0;
+    padding: 0;
+}
+
+.headerComponent .notification-content .notification-movie-img {
+display: flex;
+gap: 20px;
+margin-bottom: 15px;
+}
+
+.headerComponent .notification-content img{
+  width: 100%;
+    height: auto;
+    object-fit: cover;
+    position: relative;
+    bottom: 0;
+    height: 100%;
+}
+
+.headerComponent .drop-down-texts .notification-text{
+padding: 20px 10px;
+}
+
+
 @media only screen and (max-width: 1030px){
   .headerComponent .header-inner .main-header-elements .nav-links-list{
     display: none;
@@ -272,6 +360,11 @@ margin: 0;
     width: 120px;
     height: 45px;
   }
+
+  .headerComponent .notification-dropDown{
+width: auto;
+right: 20px;
+   }
 
   .headerComponent .header-inner .main-netflix-heading p{
     left: 150px;
