--- a/netflix-clone/src/components/CardsComponent/CardsComponent.css
+++ b/netflix-clone/src/components/CardsComponent/CardsComponent.css
@@ -7,6 +7,7 @@
 
 .cardsComponent .cards-title h1{
   color: #fff;
+  font-weight: 500;
     font-size: 32px;
     margin: 0;
     padding-top: 30px;
