--- a/netflix-clone/src/components/HeaderComponent/HeaderComponent.css
+++ b/netflix-clone/src/components/HeaderComponent/HeaderComponent.css
@@ -237,7 +237,7 @@ border-radius: 50%;
 .headerComponent .drop-down-texts{
   display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 15px;
 }
 
 .headerComponent .loggedIn-dropDown p{
@@ -319,6 +319,7 @@ cursor: pointer;
   color: #fff;
     margin: 0;
     padding: 0;
+    font-size: 18px;
 }
 
 .headerComponent .notification-content .notification-movie-img {
